--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
                 </a>
             </footer>
             
-            <!-- 5. Smaller Section Below: Action Buttons -->
+            <!-- 5. Smaller Section Below: Item Slots -->
             <section class="flex-shrink-0 h-20 bg-slate-800 p-3 grid grid-cols-3 gap-3 items-center">
-                <button class="h-14 bg-red-600/80 text-white rounded-md flex items-center justify-center hover:bg-red-500 transition-all transform hover:scale-105 active:scale-95">
-                </button>
-                <button class="h-14 bg-blue-600/80 text-white rounded-md flex items-center justify-center hover:bg-blue-500 transition-all transform hover:scale-105 active:scale-95">
-                </button>
-                <button class="h-14 bg-green-600/80 text-white rounded-md flex items-center justify-center hover:bg-green-500 transition-all transform hover:scale-105 active:scale-95">
-                </button>
+                <div class="h-14 bg-black border-2 border-white/75 text-white rounded-md flex items-center justify-center">
+                    <i class="ph-bold ph-sword text-4xl text-white/75"></i>
+                </div>
+                <div class="h-14 bg-black border-2 border-white/75 text-white rounded-md flex items-center justify-center">
+                    <i class="ph-bold ph-flask text-4xl text-white/75"></i>
+                </div>
+                <div class="h-14 bg-black border-2 border-white/75 text-white rounded-md flex items-center justify-center">
+                    <i class="ph-bold ph-carrot text-4xl text-white/75"></i>
+                </div>
             </section>
 
         </div>
@@ -88,3 +91,4 @@
 
 </body>
 </html>
+
