--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="absolute inset-0 flex items-center">
                     <!-- Player Sprite Container -->
                     <div class="w-1/2 flex justify-center items-center">
-                        <img id="player-sprite" src="https://placehold.co/128x128/3b82f6/ffffff?text=Hero" alt="Player Character" class="h-2/3 object-contain" onerror="this.onerror=null;this.src='https://placehold.co/128x128/3b82f6/ffffff?text=Hero';">
+                        <img id="player-sprite" src="darkelf2.jpg" alt="Player Character" class="h-2/3 object-contain" onerror="this.onerror=null;this.src='https://placehold.co/128x128/3b82f6/ffffff?text=Hero';">
                     </div>
                     <!-- Enemy Sprite Container -->
                     <div class="w-1/2 flex justify-center items-center">
@@ -254,5 +254,6 @@
     </script>
 </body>
 </html>
+
 
 
