--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
     </style>
 </head>
-<body class="bg-black flex items-center justify-center h-screen overflow-hidden">
+<body class="bg-black flex items-center justify-center h-screen">
 
     <!-- Game Container -->
     <div id="game-container" class="w-full max-w-md h-full bg-gray-900 shadow-2xl flex flex-col text-gray-300 border-2 border-gray-700 rounded-lg overflow-hidden">
@@ -85,7 +85,7 @@
                 </div>
                 <!-- Enemy Sprite (Right) -->
                 <div class="w-2/3 h-full flex justify-end items-center">
-                     <img id="enemy-sprite" src="babydragon.jpg" alt="Enemy" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/ef4444/ffffff?text=Enemy';">
+                     <img id="enemy-sprite" src="demon.jpg" alt="Enemy" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/ef4444/ffffff?text=Enemy';">
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
             <div id="player-area" class="h-1/3 flex items-center justify-between p-3">
                 <!-- Player Sprite (Left) -->
                 <div class="w-2/3 h-full flex justify-start items-center">
-                    <img id="player-sprite" src="hammer.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Hero';">
+                    <img id="princess.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Hero';">
                 </div>
                 <!-- Player Stats (Right) -->
                 <div class="w-1/3 flex flex-col items-end text-right space-y-1">
@@ -270,4 +270,5 @@
     </script>
 </body>
 </html>
+
 
