--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div id="player-area" class="h-1/3 flex items-center justify-between p-3">
                 <!-- Player Sprite (Left) -->
                 <div class="w-2/3 h-full flex justify-start items-center">
-                    <img id="princess.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Hero';">
+                    <img id="robogirl.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Hero';">
                 </div>
                 <!-- Player Stats (Right) -->
                 <div class="w-1/3 flex flex-col items-end text-right space-y-1">
@@ -270,6 +270,7 @@
     </script>
 </body>
 </html>
+
 
 
 
