--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <main class="flex-grow flex flex-col overflow-hidden">
 
             <!-- Enemy Area (Top 1/3) -->
-            <div id="enemy-area" class="h-1/3 flex items-center justify-between p-3 bg-black">
+            <div id="enemy-area" class="h-1/3 flex items-end justify-between p-3 bg-black">
                 <!-- Enemy Stats (Left) -->
                 <div class="w-1/3 flex flex-col items-start space-y-1">
                     <h2 class="text-base font-bold text-white truncate">BABY DRAGON</h2>
@@ -108,29 +108,37 @@
             </div>
 
             <!-- Player Area (Middle 1/3) -->
-            <div id="player-area" class="h-1/3 flex items-center justify-between p-3 bg-black">
+            <div id="player-area" class="h-1/3 flex items-start justify-between p-3 bg-black">
                 <!-- Player Sprite (Left) -->
                 <div class="w-2/3 h-full flex justify-start items-center relative">
                     <img id="player-sprite" src="princess.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Princess';">
                 </div>
-                <!-- Player Stats (Right) -->
-                <div class="w-1/3 flex flex-col items-end text-right space-y-1">
-                    <h2 class="text-base font-bold text-white">PRINCESS</h2>
+                <!-- Player Stats and Items (Right) -->
+                <div class="w-1/3 flex flex-col items-end text-right space-y-3">
+                    <!-- Stats Group -->
                     <div class="w-full">
-                        <div class="w-full hud-bar-container">
-                            <div id="player-hp-bar" class="hud-bar hp-bar" style="width: 100%;"></div>
+                        <h2 class="text-base font-bold text-white text-right">PRINCESS</h2>
+                        <div class="w-full mt-1">
+                            <div class="w-full hud-bar-container">
+                                <div id="player-hp-bar" class="hud-bar hp-bar" style="width: 100%;"></div>
+                            </div>
+                            <div class="flex justify-between text-xs px-2 mt-1 text-gray-400 font-semibold">
+                               <span>HP</span>
+                               <span id="player-hp-text">100/100</span>
+                            </div>
+                            <div class="w-full hud-bar-container mt-1">
+                                <div id="player-mp-bar" class="hud-bar mp-bar" style="width: 100%;"></div>
+                            </div>
+                             <div class="flex justify-between text-xs px-2 mt-1 text-gray-400 font-semibold">
+                               <span>MP</span>
+                               <span id="player-mp-text">30/30</span>
+                            </div>
                         </div>
-                        <div class="flex justify-between text-xs px-2 mt-1 text-gray-400 font-semibold">
-                           <span>HP</span>
-                           <span id="player-hp-text">100/100</span>
-                        </div>
-                        <div class="w-full hud-bar-container mt-1">
-                            <div id="player-mp-bar" class="hud-bar mp-bar" style="width: 100%;"></div>
-                        </div>
-                         <div class="flex justify-between text-xs px-2 mt-1 text-gray-400 font-semibold">
-                           <span>MP</span>
-                           <span id="player-mp-text">30/30</span>
-                        </div>
+                    </div>
+                    <!-- Equipment Slots Group -->
+                    <div class="flex space-x-2">
+                        <div class="w-14 h-14 bg-gray-800 border-2 border-dashed border-gray-600 rounded-md flex items-center justify-center text-xs text-gray-500 font-semibold">ITEM 1</div>
+                        <div class="w-14 h-14 bg-gray-800 border-2 border-dashed border-gray-600 rounded-md flex items-center justify-center text-xs text-gray-500 font-semibold">ITEM 2</div>
                     </div>
                 </div>
             </div>
