--- a/index.html
+++ b/index.html
@@ -134,8 +134,14 @@
                     </div>
                     <!-- Equipment Slots Group -->
                     <div class="w-full flex space-x-2">
-                        <div class="flex-1 aspect-square bg-gray-800 border-2 border-dashed border-gray-600 rounded-md flex items-center justify-center text-xs text-gray-500 font-semibold p-1">ITEM 1</div>
-                        <div class="flex-1 aspect-square bg-gray-800 border-2 border-dashed border-gray-600 rounded-md flex items-center justify-center text-xs text-gray-500 font-semibold p-1">ITEM 2</div>
+                        <div class="flex-1 aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
+                            
+                            <img src="sword-array.png" alt="Item 1" class="w-full h-full object-cover rounded-md">
+                        </div>
+                        <div class="flex-1 aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
+                             
+                            <img src="sword-tie.png" alt="Item 2" class="w-full h-full object-cover rounded-md">
+                        </div>
                     </div>
                 </div>
             </div>
