--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- Enemy Area (Top 1/3) -->
             <div id="enemy-area" class="h-1/3 flex items-end justify-between p-3 bg-black">
                 <!-- Enemy Stats (Left) -->
-                <div class="w-1/3 flex flex-col items-start space-y-1">
+                <div class="w-1/3 flex flex-col items-start space-y-1 relative z-30">
                     <h2 class="text-base font-bold text-white truncate">BABY DRAGON</h2>
                     <div class="w-full">
                         <div class="w-full hud-bar-container">
@@ -144,7 +144,7 @@
                     <img id="player-sprite" src="princess.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Princess';">
                 </div>
                 <!-- Player Stats and Items (Right) -->
-                <div class="w-1/3 flex flex-col items-end text-right space-y-3">
+                <div class="w-1/3 flex flex-col items-end text-right space-y-3 relative z-30">
                     <!-- Stats Group -->
                     <div class="w-full">
                         <h2 class="text-base font-bold text-white text-right">PRINCESS</h2>
@@ -411,4 +411,5 @@
     </script>
 </body>
 </html>
+
 
