--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Roguelike RPG UI</title>
+    <title>Roguelike UI Shell</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,17 +13,6 @@
             font-family: 'Inter', sans-serif;
             touch-action: manipulation; /* Prevents double-tap zoom on mobile */
             background-color: #0a0a0a;
-        }
-        /* Custom scrollbar for the log */
-        #log-area::-webkit-scrollbar {
-            width: 6px;
-        }
-        #log-area::-webkit-scrollbar-track {
-            background: #1a1a1a;
-        }
-        #log-area::-webkit-scrollbar-thumb {
-            background: #14b8a6; /* Teal scrollbar handle */
-            border-radius: 3px;
         }
         .hud-bar-container {
             background-color: #1f2937; /* Dark background for empty portion of bar */
@@ -39,7 +28,7 @@
         .mp-bar {
             background-color: #3b82f6; /* Solid blue */
         }
-        /* Base styles for all action buttons */
+        /* Base styles for all action buttons (if any are added later) */
         .btn {
             color: #ffffff;
             border: 1px solid transparent;
@@ -50,62 +39,7 @@
         .btn:active {
             transform: scale(0.95);
         }
-
-        /* Damage number animation */
-        @keyframes float-up {
-            0% {
-                opacity: 1;
-                transform: translateY(0) scale(1);
-            }
-            100% {
-                opacity: 0;
-                transform: translateY(-50px) scale(1.5);
-            }
-        }
-        .damage-number {
-            position: absolute;
-            font-size: 1.75rem; /* Increased size */
-            font-weight: bold;
-            color: #ef4444; /* Red color for damage */
-            text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 2px 2px 3px rgba(0,0,0,0.7); /* White outline */
-            pointer-events: none;
-            animation: float-up 1s ease-out forwards;
-            z-index: 10;
-        }
-
-        /* Attack lunge animation */
-        @keyframes lunge-right { /* Player attacking */
-            0% { transform: translate(0, 0); z-index: 20; }
-            50% { transform: translate(40px, -20px) scale(1.1); z-index: 20; }
-            100% { transform: translate(0, 0); z-index: 20; }
-        }
-        .animate-lunge-right {
-            animation: lunge-right 0.4s ease-in-out forwards;
-        }
-
-        @keyframes lunge-left { /* Enemy attacking */
-            0% { transform: translate(0, 0); z-index: 20; }
-            50% { transform: translate(-40px, 20px) scale(1.1); z-index: 20; }
-            100% { transform: translate(0, 0); z-index: 20; }
-        }
-        .animate-lunge-left {
-            animation: lunge-left 0.4s ease-in-out forwards;
-        }
-
-
-        /* Take damage shake animation */
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            20% { transform: translateX(-10px); }
-            40% { transform: translateX(10px); }
-            60% { transform: translateX(-10px); }
-            80% { transform: translateX(10px); }
-        }
-        .animate-shake {
-            animation: shake 0.3s linear;
-        }
-
-
+        /* Animation styles removed */
     </style>
 </head>
 <body class="bg-black flex items-center justify-center h-screen">
@@ -116,8 +50,8 @@
         <!-- Main Content Area -->
         <main class="flex-grow flex flex-col overflow-hidden">
 
-            <!-- Enemy Area (Top 1/3) -->
-            <div id="enemy-area" class="h-1/3 flex items-end justify-between p-3 bg-black">
+            <!-- Enemy Area (Top 1/4) - Reduced height -->
+            <div id="enemy-area" class="h-1/4 flex items-end justify-between p-3 bg-black">
                 <!-- Enemy Stats (Left) -->
                 <div class="w-1/3 flex flex-col items-start space-y-1 relative z-30">
                     <h2 class="text-base font-bold text-white truncate">BABY DRAGON</h2>
@@ -137,8 +71,18 @@
                 </div>
             </div>
 
-            <!-- Player Area (Middle 1/3) -->
-            <div id="player-area" class="h-1/3 flex items-start justify-between p-3 bg-black">
+            <!-- Middle Spacer Area (with background) -->
+            <div class="flex-grow bg-black relative">
+                <!-- Background Image Placeholder -->
+                <!-- TODO: Replace the src below with your image URL -->
+                <img src="https://placehold.co/400x600/1f2937/4b5563?text=Game+Background" 
+                     alt="Game Background" 
+                     class="absolute inset-0 w-full h-full object-cover opacity-30">
+                <!-- This area is now empty, separating enemy and player -->
+            </div>
+
+            <!-- Player Area (Bottom 1/4) - Reduced height -->
+            <div id="player-area" class="h-1/4 flex items-start justify-between p-3 bg-black">
                 <!-- Player Sprite (Left) -->
                 <div class="w-2/3 h-full flex justify-start items-center relative">
                     <img id="player-sprite" src="princess.jpg" alt="Player Character" class="max-h-full object-contain" onerror="this.onerror=null;this.src='https://placehold.co/250x250/3b82f6/ffffff?text=Princess';">
@@ -165,70 +109,35 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Equipment Slots Group (2x2 Grid) -->
-                    <div class="w-full grid grid-cols-2 gap-2">
+                    <!-- Equipment Slots Group (1x4 Grid) -->
+                    <div class="w-full grid grid-cols-4 gap-2">
                         <div class="aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
                             <!-- TODO: Replace the src below with your image URL for Item 1 -->
-                            <img id="item-slot-1" src="https://placehold.co/64x64/1f2937/4b5563?text=Item" alt="Item 1" class="w-full h-full object-cover rounded-md">
+                            <img id="item-slot-1" src="https://placehold.co/64x64/1f2937/4b5563?text=I" alt="Item 1" class="w-full h-full object-cover rounded-md">
                         </div>
                         <div class="aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
                              <!-- TODO: Replace the src below with your image URL for Item 2 -->
-                            <img id="item-slot-2" src="https://placehold.co/64x64/1f2937/4b5563?text=Item" alt="Item 2" class="w-full h-full object-cover rounded-md">
+                            <img id="item-slot-2" src="https://placehold.co/64x64/1f2937/4b5563?text=I" alt="Item 2" class="w-full h-full object-cover rounded-md">
                         </div>
                         <div class="aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
                              <!-- TODO: Replace the src below with your image URL for Item 3 -->
-                            <img id="item-slot-3" src="https://placehold.co/64x64/1f2937/4b5563?text=Item" alt="Item 3" class="w-full h-full object-cover rounded-md">
+                            <img id="item-slot-3" src="https://placehold.co/64x64/1f2937/4b5563?text=I" alt="Item 3" class="w-full h-full object-cover rounded-md">
                         </div>
                         <div class="aspect-square bg-gray-800 border-2 border-gray-600 rounded-md">
                              <!-- TODO: Replace the src below with your image URL for Item 4 -->
-                            <img id="item-slot-4" src="https://placehold.co/64x64/1f2937/4b5563?text=Item" alt="Item 4" class="w-full h-full object-cover rounded-md">
+                            <img id="item-slot-4" src="https://placehold.co/64x64/1f2937/4b5563?text=I" alt="Item 4" class="w-full h-full object-cover rounded-md">
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <!-- UI Area (Bottom 1/3) -->
-            <div id="ui-area" class="h-1/3 flex flex-col p-3 pt-0 space-y-3 bg-gray-900">
-                <!-- Log Area: Added min-h-0 to prevent flex squishing -->
-                <div id="log-area" class="flex-grow min-h-0 bg-gray-950 rounded-lg p-3 border border-teal-800 overflow-y-auto text-sm leading-relaxed shadow-inner">
-                    <p class="text-yellow-400 font-semibold">> A Baby Dragon appears!</p>
-                    <p>> What will you do?</p>
-                </div>
-                <!-- Controls Area: Changed to 1 row, 3 cols. Added flex-shrink-0 -->
-                <div id="controls-area" class="flex-shrink-0 grid grid-cols-3 gap-2 text-sm">
-                    <button class="btn h-14 rounded-lg shadow-md bg-red-600 hover:bg-red-700 border-red-800">Attack</button>
-                    <button class="btn h-14 rounded-lg shadow-md bg-blue-600 hover:bg-blue-700 border-blue-800">Skills</button>
-                    <button id="inventory-btn" class="btn h-14 rounded-lg shadow-md bg-purple-600 hover:bg-purple-700 border-purple-800">Inventory</button>
                 </div>
             </div>
 
         </main>
     </div>
 
-    <!-- Modal Container -->
-    <div id="modal-container" class="hidden absolute inset-0 bg-black bg-opacity-70 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-        <div class="bg-gray-800 border border-gray-600 rounded-lg shadow-2xl w-full max-w-md p-5 text-white">
-            <h2 id="modal-title" class="text-2xl text-center mb-4 font-bold text-white">Inventory</h2>
-            <div id="modal-content" class="text-base space-y-2 text-gray-300">
-                <p>- Healing Potion x3</p>
-                <p>- Mana Potion x1</p>
-                <p>- Rusty Sword</p>
-                <p>- Worn Leather Armor</p>
-            </div>
-            <button id="close-modal-btn" class="w-full mt-6 bg-red-600 hover:bg-red-700 rounded-lg text-lg py-2 font-semibold transition">Close</button>
-        </div>
-    </div>
-
+    <!-- Modal Container (Removed) -->
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const logArea = document.getElementById('log-area');
-            const inventoryBtn = document.getElementById('inventory-btn');
-            const closeModalBtn = document.getElementById('close-modal-btn');
-            const modalContainer = document.getElementById('modal-container');
-            const actionButtons = document.querySelectorAll('.btn');
-            const controlsArea = document.getElementById('controls-area'); // Get controls area
-
             // --- Game State (Example) ---
             const player = { maxHp: 100, currentHp: 100, maxMp: 30, currentMp: 30 };
             const enemy = { maxHp: 50, currentHp: 50 };
@@ -240,20 +149,11 @@
             const playerMpBar = document.getElementById('player-mp-bar');
             const enemyHpText = document.getElementById('enemy-hp-text');
             const enemyHpBar = document.getElementById('enemy-hp-bar');
+            // Sprites are kept in case you want to animate them later
             const playerSprite = document.getElementById('player-sprite');
             const enemySprite = document.getElementById('enemy-sprite');
 
-            let isAnimating = false; // Flag to prevent multiple actions
-
             // --- Functions ---
-            function addLogMessage(message, color = 'text-gray-300') {
-                const p = document.createElement('p');
-                p.innerHTML = `&gt; ${message}`;
-                p.className = color;
-                logArea.appendChild(p);
-                logArea.scrollTop = logArea.scrollHeight;
-            }
-
             function updateHud() {
                 // Player
                 playerHpText.textContent = `${player.currentHp}/${player.maxHp}`;
@@ -266,141 +166,7 @@
                 enemyHpBar.style.width = `${(enemy.currentHp / enemy.maxHp) * 100}%`;
             }
 
-            function playDamageAnimation(spriteElement) {
-                // Opacity blink
-                spriteElement.classList.add('opacity-50');
-                setTimeout(() => spriteElement.classList.remove('opacity-50'), 100);
-                 setTimeout(() => spriteElement.classList.add('opacity-50'), 200);
-                setTimeout(() => spriteElement.classList.remove('opacity-50'), 300);
-
-                // Shake
-                spriteElement.classList.add('animate-shake');
-                setTimeout(() => {
-                    spriteElement.classList.remove('animate-shake');
-                }, 300); // Duration of shake animation
-            }
-
-            function showDamageNumber(targetSprite, damageAmount) {
-                const damageEl = document.createElement('div');
-                damageEl.textContent = damageAmount;
-                damageEl.className = 'damage-number';
-
-                const parentContainer = targetSprite.parentElement;
-                parentContainer.appendChild(damageEl);
-
-                // Position randomly over the top half of the sprite
-                const randomX = Math.random() * (targetSprite.offsetWidth * 0.5) + (targetSprite.offsetWidth * 0.25);
-                const randomY = Math.random() * (targetSprite.offsetHeight * 0.5);
-
-                damageEl.style.left = `${targetSprite.offsetLeft + randomX}px`;
-                damageEl.style.top = `${targetSprite.offsetTop + randomY}px`;
-
-                setTimeout(() => {
-                    if (damageEl.parentElement) {
-                        damageEl.parentElement.removeChild(damageEl);
-                    }
-                }, 1000); // Remove after 1 second (duration of animation)
-            }
-
-            function playAttackAnimation(attackerSprite, animationClass, callback) {
-                isAnimating = true; // Start animation lock
-                controlsArea.style.pointerEvents = 'none'; // Disable buttons
-
-                attackerSprite.classList.add(animationClass);
-
-                setTimeout(() => {
-                    attackerSprite.classList.remove(animationClass);
-                    if (callback) {
-                        callback(); // Execute next step in the sequence
-                    }
-                }, 400); // Duration of lunge animation
-            }
-
-            function handleAction(action) {
-                if (isAnimating || enemy.currentHp <= 0) {
-                    if (enemy.currentHp <= 0) {
-                        addLogMessage("The enemy is already defeated!", "text-yellow-400");
-                    }
-                    return;
-                }
-
-                switch(action) {
-                    case 'Attack':
-                        // 1. Play attack animation
-                        playAttackAnimation(playerSprite, 'animate-lunge-right', () => {
-                            // 2. When attack animation finishes, apply damage
-                            const playerDamage = Math.floor(Math.random() * 10) + 5;
-                            showDamageNumber(enemySprite, playerDamage);
-                            playDamageAnimation(enemySprite);
-                            enemy.currentHp = Math.max(0, enemy.currentHp - playerDamage);
-                            addLogMessage(`You attack for <span class="font-bold text-white">${playerDamage}</span> damage!`, 'text-gray-300');
-                            updateHud();
-
-                            if (enemy.currentHp <= 0) {
-                                addLogMessage("You have defeated the Baby Dragon!", "text-green-400 font-bold");
-                                enemySprite.classList.add('opacity-0', 'transition-opacity', 'duration-500');
-                                isAnimating = false; // Release lock
-                                controlsArea.style.pointerEvents = 'auto'; // Re-enable buttons
-                            } else {
-                                // 3. Schedule enemy turn
-                                setTimeout(enemyTurn, 800);
-                            }
-                        });
-                        break;
-                    case 'Skills':
-                         addLogMessage("You don't have any skills yet.", "text-gray-500");
-                         isAnimating = false; // Release lock if no action taken
-                         controlsArea.style.pointerEvents = 'auto';
-                         break;
-                    // Removed 'Items' and 'Wait' cases
-                }
-                // updateHud() is now called after damage calculation
-            }
-
-            function enemyTurn() {
-                if(enemy.currentHp <= 0) {
-                    isAnimating = false; // Ensure lock is released if enemy was defeated
-                    controlsArea.style.pointerEvents = 'auto';
-                    return;
-                }
-
-                // 1. Play enemy attack animation
-                playAttackAnimation(enemySprite, 'animate-lunge-left', () => {
-                    // 2. When attack finishes, apply damage to player
-                    const enemyDamage = Math.floor(Math.random() * 8) + 3;
-                    showDamageNumber(playerSprite, enemyDamage);
-                    playDamageAnimation(playerSprite);
-                    player.currentHp = Math.max(0, player.currentHp - enemyDamage);
-                    addLogMessage(`The Baby Dragon attacks for <span class="font-bold text-red-400">${enemyDamage}</span> damage!`, 'text-gray-300');
-                    updateHud();
-
-                    if(player.currentHp <= 0) {
-                        addLogMessage("You have been defeated... <span class='font-bold'>Game Over.</span>", "text-red-500");
-                        playerSprite.classList.add('opacity-0', 'transition-opacity', 'duration-500');
-                    }
-
-                    // 3. Release animation lock and re-enable buttons
-                    isAnimating = false;
-                    controlsArea.style.pointerEvents = 'auto';
-                });
-            }
-
-            // --- Event Listeners ---
-            inventoryBtn.addEventListener('click', () => {
-                if (isAnimating) return; // Prevent opening modal during animations
-                modalContainer.classList.remove('hidden');
-            });
-
-            closeModalBtn.addEventListener('click', () => {
-                modalContainer.classList.add('hidden');
-            });
-
-            actionButtons.forEach(button => {
-                const action = button.textContent;
-                if(action !== 'Inventory'){
-                    button.addEventListener('click', () => handleAction(action));
-                }
-            });
+            // --- Event Listeners (All combat/modal listeners removed) ---
 
             // Initial UI setup
             updateHud();
@@ -408,3 +174,5 @@
     </script>
 </body>
 </html>
+
+
